Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-03-03 (SVN):
    * viddef_t changes, #2/3: Changed width, height, conwidth, conheight
      and most importantly the rowbytes member of the viddef_t structure
      from unsigned int to signed int.

2012-03-03 (SVN):
    * viddef_t changes, #1/3: Removed several int casts from earlier
      patches which are intended for silencing -Wsign-compare warnings.

2012-03-03 (SVN):
    * Added support for non-power-of-two textures extension: detect in
      gl_vidsdl.c/gl_vidnt.c by searching GL_ARB_texture_non_power_of_two
      and do not snap the height and width of the texture to a power of
      2 in gldraw.c::GL_Upload32() if the extension is present.

2012-03-03 (SVN):
    * gl_rmain.c (R_DrawAliasModel): If shadows are enabled always get
      the lighting information regardless of special cases where it is
      not used because R_LightPoint[Color]() calculates lightspot for us
      which is used by GL_DrawAliasShadow(). Fixes the broken shadows
      after svn rev. 2509 during development of uhexen2 v1.4.2.

2012-03-03 (SVN):
    * removed gl_stencilshadow cvar, enabled shadows stencil buffering
      by default. BTW, shadows have always been broken and svn commit
      rev.2509 added even another brokenness to them: remove them soon?

2012-03-03 (SVN):
    * gl_draw.c: Replaced the GL_MipMap() procedure by a newer version
      adapted from darkplaces.

2012-03-03 (SVN):
    * gl_model.h, gl_model.c: Added XF_GLOW_TORCH_EFYPT as new flag for
      eflmtrch.mdl, adjusted Mod_SetAliasModelExtraFlags() to use it.
    * gl_rmain.c: Changed the default of torch glow effects to disabled.
      Adjusted R_DrawGlow for the new XF_GLOW_TORCH_EFYPT.
    * menu.c: Changed the order of torch and missile glow options.

2012-03-03 (SVN):
    * engine/h2shared/h2config.h, launcher/games.h: Updated notes about
      the ENABLE_OLD_DEMO compile time option. (... again...)

2012-03-03 (SVN):